navbar, section 1 and 2 complete

--- a/index.html
+++ b/index.html
@@ -7,32 +7,81 @@
   <title>CECOEL - CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS</title>
   <link rel="icon" href="img/logo-Cecoel-2-1200x1031-1.png"/>
   <link rel="stylesheet" href="index.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.2.1/hamburgers.min.css" integrity="sha512-+mlclc5Q/eHs49oIOCxnnENudJWuNqX5AogCiqRBgKnpoplPzETg2fkgBFVC6WYUVxYYljuxPNG8RE7yBy1K+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="container">
-    <section class="header-index">
-      <div class="wrapper">
-        <div class="w-text">
-          <div class="h-text">CECOEL</div>
-          <div class="h-content">CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS</div>
-        </div>
-        <div class="w-content">
-          <div class="menulogo"></div>
-          <div class="menulogo"></div>
-          <div class="menulogo"></div>
+    <input type="checkbox" id="toggle"/>
+    <nav>
+      <img src="img/logo-Cecoel-2-1200x1031-1.png" class="nav-logo" title="CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS"/>
+      <div class="nav-btns">
+        <a href="#home" class="nav-btn">Home</a>
+        <a href="#vision" class="nav-btn">Visión</a>
+        <a href="#nosotros" class="nav-btn">Nosotros</a>
+      </div>
+      <label for="toggle" class="navbar-toggler">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </label>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Visión</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Nosotros</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="section-1">
+      <img src="img/Portada-2.png" class="img-section-1" alt="portada-2"/>
+    </section>
+    <section class="section-2">
+      <div class="section-2-left">
+        <h3 class="section-2-left-title">Nuestra Visión</h3>
+        <p class="section-2-left-content">Ser referente del sector energético para el diálogo público privado en lo referido a la elaboración de políticas públicas que estén vinculadas al sector.</p>
+        <a href="#" class="section-2-btn">LEER MÁS</a>
+      </div>
+      <div class="section-2-right">
+        <img src="img/logo-Cecoel-2-1200x1031-1.png" class="section-2-right-img" alt="section-2-logo"/>
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="section-3-element">
+        <i class="fa-solid fa-users fa-3x"></i>
+        <div class="section-3-text">
+          <div class="section-3-title">Somos</div>
+          <div class="section-3-content">una organización sin fines de lucro</div>
         </div>
       </div>
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Visión</a></li>
-        <li><a href="#">Nosotros</a></li>
-      </ul>
+      <div class="section-3-element">
+        <i class="fa-solid fa-user-gear fa-3x"></i>
+        <div class="section-3-text">
+          <div class="section-3-title">32</div>
+          <div class="section-3-content">años con nuestros asociados</div>
+        </div>
+      </div>
+      <div class="section-3-element">
+        <i class="fa-solid fa-industry fa-3x"></i>
+        <div class="section-3-text">
+          <div class="section-3-title">50</div>
+          <div class="section-3-content">empresas del sectos adheridas</div>
+        </div>
+      </div>
+      <div class="section-3-element">
+        <i class="fa-solid fa-bolt-lightning fa-3x"></i>
+        <div class="section-3-text">
+          <div class="section-3-title">Apoyo</div>
+          <div class="section-3-content">al desarrollo energético del país</div>
+        </div>
+      </div>
     </section>
-    <section class="">SECTION 2</section>
-    <section class="">SECTION 3</section>
-    <section class="">SECTION 4</section>
-    <section class="">SECTION 5</section>
+    <section class="section-4">SECTION 4</section>
+    <section class="section-5">SECTION 5</section>
+    <section class="section-6">SECTION 6</section>
   </div>
   <script src="js/menu.js"></script>
 </body>
