section 3 animation finished

--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
       </div>
     </section>
     <section class="section-3">
-      <div class="section-3-element">
+      <div class="section-3-element disguise">
         <i class="fa-solid fa-users fa-3x"></i>
         <div class="section-3-text">
           <div class="section-3-title">Somos</div>
           <div class="section-3-content">una organización sin fines de lucro</div>
         </div>
       </div>
-      <div class="section-3-element">
+      <div class="section-3-element disguise">
         <i class="fa-solid fa-user-gear fa-3x"></i>
         <div class="section-3-text">
-          <div class="section-3-title">32</div>
+          <div class="section-3-title counter-quantity" data-total-quantity="32">0</div>
           <div class="section-3-content">años con nuestros asociados</div>
         </div>
       </div>
-      <div class="section-3-element">
+      <div class="section-3-element disguise">
         <i class="fa-solid fa-industry fa-3x"></i>
         <div class="section-3-text">
-          <div class="section-3-title">50</div>
+          <div class="section-3-title counter-quantity" data-total-quantity="50">0</div>
           <div class="section-3-content">empresas del sectos adheridas</div>
         </div>
       </div>
-      <div class="section-3-element">
+      <div class="section-3-element disguise">
         <i class="fa-solid fa-bolt-lightning fa-3x"></i>
         <div class="section-3-text">
           <div class="section-3-title">Apoyo</div>
@@ -83,6 +83,6 @@
     <section class="section-5">SECTION 5</section>
     <section class="section-6">SECTION 6</section>
   </div>
-  <script src="js/menu.js"></script>
+  <script src="js/section-3-animation.js"></script>
 </body>
 </html>
