--- a/index.html
+++ b/index.html
@@ -1,88 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CECOEL - CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS</title>
-  <link rel="icon" href="img/logo-Cecoel-2-1200x1031-1.png"/>
-  <link rel="stylesheet" href="index.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-  <div class="container">
-    <input type="checkbox" id="toggle"/>
-    <nav>
-      <img src="img/logo-Cecoel-2-1200x1031-1.png" class="nav-logo" title="CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS"/>
-      <div class="nav-btns">
-        <a href="#home" class="nav-btn">Home</a>
-        <a href="#vision" class="nav-btn">Visión</a>
-        <a href="#nosotros" class="nav-btn">Nosotros</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      CECOEL - CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS
+    </title>
+    <link rel="icon" href="img/logo-Cecoel-2-1200x1031-1.png" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">
+          <!--<div></div>-->
+          <img
+            src="img/logo-Cecoel-2-1200x1031-1.png"
+            class="nav-logo"
+            title="CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+            <div class="m-auto d-flex nav-item-content">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Visión</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Nosotros</a>
+              </li>
+            </div>
+          </ul>
+        </div>
       </div>
-      <label for="toggle" class="navbar-toggler">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </label>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a href="#" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Visión</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">Nosotros</a>
-        </li>
-      </ul>
     </nav>
-    <section class="section-1">
-      <img src="img/Portada-2.png" class="img-section-1" alt="portada-2"/>
-    </section>
-    <section class="section-2">
-      <div class="section-2-left">
-        <h3 class="section-2-left-title">Nuestra Visión</h3>
-        <p class="section-2-left-content">Ser referente del sector energético para el diálogo público privado en lo referido a la elaboración de políticas públicas que estén vinculadas al sector.</p>
-        <a href="#" class="section-2-btn">LEER MÁS</a>
-      </div>
-      <div class="section-2-right">
-        <img src="img/logo-Cecoel-2-1200x1031-1.png" class="section-2-right-img" alt="section-2-logo"/>
-      </div>
-    </section>
-    <section class="section-3">
-      <div class="section-3-element disguise">
-        <i class="fa-solid fa-users fa-3x"></i>
-        <div class="section-3-text">
-          <div class="section-3-title">Somos</div>
-          <div class="section-3-content">una organización sin fines de lucro</div>
+    <div class="web-content">
+      <section class="section-1">
+        <img src="img/Portada-2.png" class="img-section-1" alt="portada-2" />
+      </section>
+      <section class="section-2">
+        <div class="section-2-left">
+          <h3 class="section-2-left-title">Nuestra Visión</h3>
+          <p class="section-2-left-content">
+            Ser referente del sector energético para el diálogo público privado
+            en lo referido a la elaboración de políticas públicas que estén
+            vinculadas al sector.
+          </p>
+          <a href="#" class="section-2-btn">LEER MÁS</a>
         </div>
-      </div>
-      <div class="section-3-element disguise">
-        <i class="fa-solid fa-user-gear fa-3x"></i>
-        <div class="section-3-text">
-          <div class="section-3-title counter-quantity" data-total-quantity="32">0</div>
-          <div class="section-3-content">años con nuestros asociados</div>
+        <div class="section-2-right">
+          <img
+            src="img/logo-Cecoel-2-1200x1031-1.png"
+            class="section-2-right-img"
+            alt="section-2-logo"
+          />
         </div>
-      </div>
-      <div class="section-3-element disguise">
-        <i class="fa-solid fa-industry fa-3x"></i>
-        <div class="section-3-text">
-          <div class="section-3-title counter-quantity" data-total-quantity="50">0</div>
-          <div class="section-3-content">empresas del sectos adheridas</div>
+      </section>
+      <section class="section-3">
+        <div class="section-3-element disguise">
+          <i class="fa-solid fa-users fa-3x"></i>
+          <div class="section-3-text">
+            <div class="section-3-title">Somos</div>
+            <div class="section-3-content">
+              una organización sin fines de lucro
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="section-3-element disguise">
-        <i class="fa-solid fa-bolt-lightning fa-3x"></i>
-        <div class="section-3-text">
-          <div class="section-3-title">Apoyo</div>
-          <div class="section-3-content">al desarrollo energético del país</div>
+        <div class="section-3-element disguise">
+          <i class="fa-solid fa-user-gear fa-3x"></i>
+          <div class="section-3-text">
+            <div
+              class="section-3-title counter-quantity"
+              data-total-quantity="32"
+            >
+              0
+            </div>
+            <div class="section-3-content">años con nuestros asociados</div>
+          </div>
         </div>
-      </div>
-    </section>
-    <section class="section-4">SECTION 4</section>
-    <section class="section-5">SECTION 5</section>
-    <section class="section-6">SECTION 6</section>
-  </div>
-  <script src="js/section-3-animation.js"></script>
-</body>
+        <div class="section-3-element disguise">
+          <i class="fa-solid fa-industry fa-3x"></i>
+          <div class="section-3-text">
+            <div
+              class="section-3-title counter-quantity"
+              data-total-quantity="50"
+            >
+              0
+            </div>
+            <div class="section-3-content">empresas del sectos adheridas</div>
+          </div>
+        </div>
+        <div class="section-3-element disguise">
+          <i class="fa-solid fa-bolt-lightning fa-3x"></i>
+          <div class="section-3-text">
+            <div class="section-3-title">Apoyo</div>
+            <div class="section-3-content">
+              al desarrollo energético del país
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-4">
+        <div class="section-4-parallax">
+          <div class="section-4-box">
+            <div class="section-4-box-title">Nosotros</div>
+            <div class="section-4-box-description">
+              Nuestro gremio que se nuclea y define como una Asociación Civil
+              sin fines de Lucro, denominada CÁMARA DE EMPRESAS CONSTRUCTORAS DE
+              OBRAS ELECTROMECANICAS - CECOEL.
+            </div>
+            <div class="section-4-box-btn-content">
+              <button class="section-4-box-btn">leer más</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-5">
+        <div class="section-5-content-left">
+          <p class="section-5-content-left-text">somos cecoel, aportamos con energía al desarrollo energetico del país</p>
+        </div>
+        <div class="section-5-content-right">
+          <img src="img/Slogan.jpg" alt="slogan" class="section-5-content-right-img">
+        </div>
+      </section>
+      <section class="section-6">SECTION 6</section>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/section-3-animation.js"></script>
+  </body>
 </html>
