--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
-          <!--<div></div>-->
           <img
             src="img/logo-Cecoel-2-1200x1031-1.png"
             class="nav-logo"
@@ -49,10 +48,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <div class="m-auto d-flex nav-item-content">
               <li class="nav-item">
-                <a
-                  class="nav-link active text-white"
-                  aria-current="page"
-                  href="#"
+                <a class="nav-link text-white" aria-current="page" href="#"
                   >Home</a
                 >
               </li>
@@ -150,13 +146,118 @@
       </section>
       <section class="section-5">
         <div class="section-5-content-left">
-          <p class="section-5-content-left-text">somos cecoel, aportamos con energía al desarrollo energetico del país</p>
+          <p class="section-5-content-left-text">
+            somos cecoel, aportamos con energía al desarrollo energetico del
+            país
+          </p>
         </div>
         <div class="section-5-content-right">
-          <img src="img/Slogan.jpg" alt="slogan" class="section-5-content-right-img">
+          <img
+            src="img/Slogan.jpg"
+            alt="slogan"
+            class="section-5-content-right-img"
+          />
         </div>
       </section>
-      <section class="section-6">SECTION 6</section>
+      <section class="section-6">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3608.227361516008!2d-57.584473925225936!3d-25.26293602630129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da6472c196bcb%3A0xfb39f8da502d5b1c!2sSantisimo%20Sacramento%202279%2C%20Asunci%C3%B3n%201805!5e0!3m2!1ses!2spy!4v1683054605891!5m2!1ses!2spy"
+          width="1079.19"
+          height="457.08"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+      <footer>
+        <div class="footer-address">
+          <div class="footer-title">dirección</div>
+          <div class="footer-container">
+            <i class="fa-solid fa-house-chimney"></i>
+            <div class="footer-text">Avda. Santísimo Sacramento 2279</div>
+          </div>
+        </div>
+        <div class="footer-contact">
+          <div class="footer-title">contacto</div>
+          <div class="footer-content">
+            <div class="footer-subcontent">
+              <i class="fa-solid fa-square-phone-flip"></i>
+              <div class="footer-text">+595 21 297 303</div>
+            </div>
+            <div class="footer-subcontent">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                class="iconify"
+              >
+                <path
+                  fill="currentColor"
+                  d="M19.05 4.91A9.816 9.816 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01zm-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18l-3.12.82l.83-3.04l-.2-.31a8.264 8.264 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.24-8.24c2.2 0 4.27.86 5.82 2.42a8.183 8.183 0 0 1 2.41 5.83c.02 4.54-3.68 8.23-8.22 8.23zm4.52-6.16c-.25-.12-1.47-.72-1.69-.81c-.23-.08-.39-.12-.56.12c-.17.25-.64.81-.78.97c-.14.17-.29.19-.54.06c-.25-.12-1.05-.39-1.99-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.14-.25-.02-.38.11-.51c.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31c-.22.25-.86.85-.86 2.07c0 1.22.89 2.4 1.01 2.56c.12.17 1.75 2.67 4.23 3.74c.59.26 1.05.41 1.41.52c.59.19 1.13.16 1.56.1c.48-.07 1.47-.6 1.67-1.18c.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28z"
+                />
+              </svg>
+              <div class="footer-text">+595 981 158 794</div>
+            </div>
+            <div class="footer-subcontent">
+              <i class="fa-solid fa-square-envelope"></i>
+              <div class="footer-text">cecoel@cecoel.org.py</div>
+            </div>
+            <div class="footer-subcontent">
+              <i class="fa-solid fa-square-envelope"></i>
+              <div class="footer-text">amorales@cecoel.org.py</div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-schedule">
+          <div class="footer-title">horario</div>
+          <div class="footer-content">
+            <div class="footer-text">Lunes a Viernes</div>
+            <div class="footer-text">08:00 a 18:00 hs.</div>
+          </div>
+        </div>
+        <div class="footer-social-networks">
+          <div class="footer-title">seguinos</div>
+          <div class="footer-subcontent-social">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              class="iconify-facebook"
+            >
+              <path
+                fill="currentColor"
+                d="M15.402 21v-6.966h2.333l.349-2.708h-2.682V9.598c0-.784.218-1.319 1.342-1.319h1.434V5.857a19.19 19.19 0 0 0-2.09-.107c-2.067 0-3.482 1.262-3.482 3.58v1.996h-2.338v2.708h2.338V21H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4.598Z"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              class="iconify-twitter"
+            >
+              <path
+                fill="currentColor"
+                d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="footer-logo-date">
+          <img
+            src="img/logo-Cecoel-2-1200x1031-1.png"
+            alt="footer-logo"
+            class="footer-logo"
+          />
+          <div class="footer-text">
+            CECOEL - CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS
+            - 2023
+          </div>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -164,5 +265,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/section-3-animation.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   </body>
 </html>
