--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link text-white" href="vision.html">Visión</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Nosotros</a>
+                <a class="nav-link text-white" href="nosotros.html">Nosotros</a>
               </li>
             </div>
           </ul>
