--- a/nosotros.html
+++ b/nosotros.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visión - CECOEL</title>
+    <title>Nosotros - CECOEL</title>
     <link rel="icon" href="img/logo-Cecoel-2-1200x1031-1.png" />
-    <link rel="stylesheet" href="css/vision.css" />
+    <link rel="stylesheet" href="css/nosotros.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,7 +39,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <div class="m-auto d-flex nav-item-content">
               <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="index.html"
+                <a
+                  class="nav-link text-white"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -54,26 +57,7 @@
         </div>
       </div>
     </nav>
-    <div class="vision-container">
-      <div class="vision">
-        <div class="content-title">Visión</div>
-        <div class="content-description">Ser referente del sector energético para el diálogo público privado en lo referido a la elaboración de políticas públicas que estén vinculadas al sector.</div>
-      </div>
-      <div class="mision">
-        <div class="content-title">Misión</div>
-        <div class="content-description">Representar y defender los intereses de sus asociados y brindar servicios de calidad que permitan satisfacer sus necesidades y expectativas, impulsando su competitividad en beneficio del país.</div>
-      </div>
-      <div class="objetivos">
-        <div class="content-title">Objetivos</div>
-        <div class="content-description">
-          <ul>
-            <li>Velar por los intereses comunes del sector y contribuir al desarrollo del país, promoviendo el trabajo de las empresas paraguayas.</li>
-            <li>Promover la formalización, normalización, capacitación y desarrollo tecnológico del sector energético.</li>
-            <li>Fomentar valores, impulsando la responsabilidad social empresarial.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <div></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
