--- a/nosotros.html
+++ b/nosotros.html
@@ -13,6 +13,13 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -57,7 +64,47 @@
         </div>
       </div>
     </nav>
-    <div></div>
+    <div>
+      <section class="us">
+        <img
+          src="img/ACTA-FUNDACIONAL.-CECOEL-1_page-0001-1200x1698-1.jpg"
+          alt="record"
+          class="record"
+        />
+        <div class="us-container">
+          <div class="us-header">Nosotros</div>
+          <div class="us-header-content">
+            Nuestro gremio que se nuclea y define como una Asociación Civil sin
+            fines de Lucro, denominada CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS
+            ELECTROMECANICAS - CECOEL. Está conformada por profesionales y
+            entidades especializadas en obras eléctricas e industrias dedicadas
+            a la elaboración de productos y materiales eléctricos, para la
+            defensa, fomento y protección del ejercicio de tales actividades y
+            de los intereses profesionales de sus asociados desde el 19 de Marzo
+            de 1990. Buscamos y trabajamos arduamente para conseguir mejores
+            oportunidades, colaborando con el desarrollo del país, sosteniendo a
+            muchas familias paraguayas a través del trabajo digno. SOMOS CECOEL,
+            APORTAMOS CON ENERGÍA AL DESARROLLO ENERGETICO DEL PAÍS.
+          </div>
+        </div>
+      </section>
+      <section class="us-board-of-directors">
+        <div class="us-board-of-directors-content">
+          <i class="fa-solid fa-user-tie fa-3x"></i>
+          <div class="us-board-of-directors-header-title">cecoel</div>
+          <div class="us-board-of-directors-header-subtitle">Comisión Directiva</div>
+          <img src="img/Com-Directiva.png" alt="board-of-directors" class="board-of-directors-img"/>
+        </div>
+      </section>
+      <section class="us-staff">
+        <div class="us-staff-header"></div>
+        <div class="us-staff-content"></div>
+      </section>
+      <section class="us-affiliates">
+        <div class="us-affiliates-header"></div>
+        <div class="us-affiliates-content"></div>
+      </section>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
