footer social links fixed

--- a/nosotros.html
+++ b/nosotros.html
@@ -92,8 +92,14 @@
         <div class="us-board-of-directors-content">
           <i class="fa-solid fa-user-tie fa-3x"></i>
           <div class="us-board-of-directors-header-title">cecoel</div>
-          <div class="us-board-of-directors-header-subtitle">Comisión Directiva</div>
-          <img src="img/Com-Directiva.png" alt="board-of-directors" class="board-of-directors-img"/>
+          <div class="us-board-of-directors-header-subtitle">
+            Comisión Directiva
+          </div>
+          <img
+            src="img/Com-Directiva.png"
+            alt="board-of-directors"
+            class="board-of-directors-img"
+          />
         </div>
       </section>
       <section class="us-staff">
