--- a/vision.html
+++ b/vision.html
@@ -39,7 +39,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <div class="m-auto d-flex nav-item-content">
               <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="index.html"
+                <a
+                  class="nav-link text-white"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -57,19 +60,37 @@
     <div class="vision-container">
       <div class="vision">
         <div class="content-title">Visión</div>
-        <div class="content-description">Ser referente del sector energético para el diálogo público privado en lo referido a la elaboración de políticas públicas que estén vinculadas al sector.</div>
+        <div class="content-description">
+          Ser referente del sector energético para el diálogo público privado en
+          lo referido a la elaboración de políticas públicas que estén
+          vinculadas al sector.
+        </div>
       </div>
       <div class="mision">
         <div class="content-title">Misión</div>
-        <div class="content-description">Representar y defender los intereses de sus asociados y brindar servicios de calidad que permitan satisfacer sus necesidades y expectativas, impulsando su competitividad en beneficio del país.</div>
+        <div class="content-description">
+          Representar y defender los intereses de sus asociados y brindar
+          servicios de calidad que permitan satisfacer sus necesidades y
+          expectativas, impulsando su competitividad en beneficio del país.
+        </div>
       </div>
       <div class="objetivos">
         <div class="content-title">Objetivos</div>
         <div class="content-description">
           <ul>
-            <li>Velar por los intereses comunes del sector y contribuir al desarrollo del país, promoviendo el trabajo de las empresas paraguayas.</li>
-            <li>Promover la formalización, normalización, capacitación y desarrollo tecnológico del sector energético.</li>
-            <li>Fomentar valores, impulsando la responsabilidad social empresarial.</li>
+            <li>
+              Velar por los intereses comunes del sector y contribuir al
+              desarrollo del país, promoviendo el trabajo de las empresas
+              paraguayas.
+            </li>
+            <li>
+              Promover la formalización, normalización, capacitación y
+              desarrollo tecnológico del sector energético.
+            </li>
+            <li>
+              Fomentar valores, impulsando la responsabilidad social
+              empresarial.
+            </li>
           </ul>
         </div>
       </div>
