--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       CECOEL - CÁMARA DE EMPRESAS CONSTRUCTORAS DE OBRAS ELECTROMECANICAS
     </title>
     <link rel="icon" href="img/logo-Cecoel-2-1200x1031-1.png" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -48,7 +48,10 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <div class="m-auto d-flex nav-item-content">
               <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="index.html"
+                <a
+                  class="nav-link text-white"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -139,7 +142,7 @@
               OBRAS ELECTROMECANICAS - CECOEL.
             </div>
             <div class="section-4-box-btn-content">
-              <button class="section-4-box-btn">leer más</button>
+              <a href="nosotros.html" class="section-4-box-btn">leer más</a>
             </div>
           </div>
         </div>
@@ -220,32 +223,44 @@
         <div class="footer-social-networks">
           <div class="footer-title">seguinos</div>
           <div class="footer-subcontent-social">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              class="iconify-facebook"
+            <a
+              href="https://m.facebook.com/CECOELPARAGUAY/"
+              class="footer-subcontent-social-link"
+              target="_blank"
             >
-              <path
-                fill="currentColor"
-                d="M15.402 21v-6.966h2.333l.349-2.708h-2.682V9.598c0-.784.218-1.319 1.342-1.319h1.434V5.857a19.19 19.19 0 0 0-2.09-.107c-2.067 0-3.482 1.262-3.482 3.58v1.996h-2.338v2.708h2.338V21H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4.598Z"
-              />
-              <title>Facebook</title>
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              class="iconify-twitter"
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                class="iconify-facebook"
+              >
+                <path
+                  fill="currentColor"
+                  d="M15.402 21v-6.966h2.333l.349-2.708h-2.682V9.598c0-.784.218-1.319 1.342-1.319h1.434V5.857a19.19 19.19 0 0 0-2.09-.107c-2.067 0-3.482 1.262-3.482 3.58v1.996h-2.338v2.708h2.338V21H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4.598Z"
+                />
+                <title>Facebook</title>
+              </svg>
+            </a>
+            <a
+              href="https://twitter.com/cecoel1"
+              class="footer-subcontent-social-link"
+              target="_blank"
             >
-              <path
-                fill="currentColor"
-                d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z"
-              />
-              <title>Twitter</title>
-            </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                class="iconify-twitter"
+              >
+                <path
+                  fill="currentColor"
+                  d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z"
+                />
+                <title>Twitter</title>
+              </svg>
+            </a>
           </div>
         </div>
         <div class="footer-logo-date">
@@ -267,7 +282,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/section-3-animation.js"></script>
-    <!--<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>-->
     <script src="js/footer-date.js"></script>
   </body>
 </html>
