--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
           <img
