us staff and affiliates section finished

--- a/nosotros.html
+++ b/nosotros.html
@@ -103,12 +103,75 @@
         </div>
       </section>
       <section class="us-staff">
-        <div class="us-staff-header"></div>
-        <div class="us-staff-content"></div>
+        <div class="us-staff-content">
+          <i class="fa-solid fa-users fa-3x"></i>
+          <div class="us-staff-title">cecoel</div>
+          <div class="us-staff-subtitle">Staff</div>
+          <img src="img/Staff.png" alt="staff" class="us-staff-img"/>
+        </div>
       </section>
       <section class="us-affiliates">
-        <div class="us-affiliates-header"></div>
-        <div class="us-affiliates-content"></div>
+        <div class="us-affiliates-content">
+          <i class="fa-solid fa-users-gear fa-3x"></i>
+          <div class="us-affiliates-title">cecoel</div>
+          <div class="us-affiliates-subtitle">Empresas Asociadas</div>
+        </div>
+        <div class="us-affiliate-description">
+          <div></div>
+          <ol class="us-affiliate-list">
+            <li class="us-affiliate-list-item">14 DE JULIO S.A.</li>
+            <li class="us-affiliate-list-item">ABS MONTAJES S.A.</li>
+            <li class="us-affiliate-list-item">CONO S.R.L.</li>
+            <li class="us-affiliate-list-item">COTEPA S.A.</li>
+            <li class="us-affiliate-list-item">ICI S.A.</li>
+            <li class="us-affiliate-list-item">INGELCO S.R.L.</li>
+            <li class="us-affiliate-list-item">PROMONT S.R.L.</li>
+            <li class="us-affiliate-list-item">SAGUAN S.R.L.</li>
+            <li class="us-affiliate-list-item">TECMONT S.R.L.</li>
+            <li class="us-affiliate-list-item">TECNO ELECTRIC S.A.</li>
+            <li class="us-affiliate-list-item">YPOA ING. S.A.</li>
+            <li class="us-affiliate-list-item">BALMACEDA S.R.L.</li>
+            <li class="us-affiliate-list-item">EIC S.R.L.</li>
+            <li class="us-affiliate-list-item">B.H.M. INGENIERÍA S.R.L.</li>
+            <li class="us-affiliate-list-item">TECNO PLUS S.A.</li>
+            <li class="us-affiliate-list-item">ANTONIO ROA e HIJOS S.R.L.</li>
+            <li class="us-affiliate-list-item">GCA S.A.</li>
+            <li class="us-affiliate-list-item">ELECTROMACH S.A.</li>
+            <li class="us-affiliate-list-item">CALDETEC ING. S.R.L.</li>
+            <li class="us-affiliate-list-item">INPACO S.A.</li>
+            <li class="us-affiliate-list-item">CIE S.A.</li>
+            <li class="us-affiliate-list-item">INGEPAR S.A.</li>
+            <li class="us-affiliate-list-item">FIDEL ESPINOZA PEREZ.</li>
+            <li class="us-affiliate-list-item">BARRAIL HNOS. S.A. DE CONST.</li>
+            <li class="us-affiliate-list-item">NORMA GIRETT.</li>
+            <li class="us-affiliate-list-item">TIE S.A.</li>
+            <li class="us-affiliate-list-item">HAWA S.A.</li>
+            <li class="us-affiliate-list-item">T & C INGENIERIA DE TOPOG.</li>
+            <li class="us-affiliate-list-item">AGRO INDUSTRIAL SAN JUAN S.R.L.</li>
+            <li class="us-affiliate-list-item">BENITO ROGGIO E HIJOS S.A.</li>
+            <li class="us-affiliate-list-item">CIMEC S.R.L.</li>
+            <li class="us-affiliate-list-item">EPE S.A.</li>
+            <li class="us-affiliate-list-item">INPROCON S.R.L.</li>
+            <li class="us-affiliate-list-item">DECO S.R.L.</li>
+            <li class="us-affiliate-list-item">COCIEL INGENIERIA S.R.L.</li>
+            <li class="us-affiliate-list-item">SEME S.A.</li>
+            <li class="us-affiliate-list-item">COVIPA S.A.</li>
+            <li class="us-affiliate-list-item">INGELMEC S.R.L.</li>
+            <li class="us-affiliate-list-item">TR CONSTRUCCIONES S.A.</li>
+            <li class="us-affiliate-list-item">TELMEC S.A.</li>
+            <li class="us-affiliate-list-item">BS INGENIERÍA S.R.L.</li>
+            <li class="us-affiliate-list-item">PROEL INGENIERÍA.</li>
+            <li class="us-affiliate-list-item">ELEMEC S.R.L.</li>
+            <li class="us-affiliate-list-item">AMAMBAY INGENIERIA S.A.</li>
+            <li class="us-affiliate-list-item">STELCI S.R.L.</li>
+            <li class="us-affiliate-list-item">TECEL S.A.</li>
+            <li class="us-affiliate-list-item">ATS S.R.L.</li>
+            <li class="us-affiliate-list-item">ALUM S.R.L.</li>
+            <li class="us-affiliate-list-item">CEHA S.A.</li>
+            <li class="us-affiliate-list-item">OPEL INGENIERIA.</li>
+          </ol>
+          <div></div>
+        </div>
       </section>
     </div>
     <script
