--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="index.html">
           <img
             src="img/logo-Cecoel-2-1200x1031-1.png"
             class="nav-logo"
